# portfolio

Business Opportunity Index/: Untitled.ipynb  mindful-vial-460001-h6-fd8675f1598b.json  pyproject.py  pyproject.toml  storage_bq.py  utilis.py
Business Opportunity Index/.ipynb_checkpoints/: app-checkpoint.py  config-checkpoint.py  run_pipeline-checkpoint.py  storage_bq-checkpoint.py
Business Opportunity Index/boi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Business Opportunity Index/compute/: bq_sink.py
Business Opportunity Index/compute/.ipynb_checkpoints/: scorer-checkpoint.py
Business Opportunity Index/ingest/: fsq_popularity.py  osm_pois.py
Business Opportunity Index/ingest/.ipynb_checkpoints/: worldbank-checkpoint.py
Cannabis Market Research/: Colorado Marijuana_Sales_2014_To_2024_Report.xlsx - State Report.csv  Colorado_Cultivations - Retail.csv  Colorado_Stores - Medical.csv  Colorado_Stores - Retail.csv  Product Manufacturers - Retail.csv  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  ad_retail_delivery_sales_mass_2025.csv  canna.py  cannabis_dashboard_canvas.ipynb  co_license_map.html  price_per_ounce_mass_2025.csv  wa_cannabis_sales - Sheet1.csv  washington_ca.ipynb
Cannabis Market Research/.ipynb_checkpoints/: Colorado_Cultivations - Medical-checkpoint.csv  (+2 more)
SVJ/: home.py  leaderboard.csv
Synthetic Data Marketing Project/: Untitled.ipynb  analysis.ipynb  mindful-vial-460001-h6-4d83b36dd3e9.json  neymar_dashboard.ipynb  neymar_kmeans.py  neymar_kpi.py  neymar_live.py  neymar_query.py  neymar_watch.py
(+30 files in other folders)
